# cmake_lib_dll

task/LibProject1/: LibProject1.sln
task/LibProject1/Lib1/: Greater.cpp  Greater.h  Lib1.vcxproj  Lib1.vcxproj.filters
task/LibProject1/client1/: client1.cpp  client1.vcxproj
task1_cmake/: CMakeLists.txt
task2DLL/: CMakeLists.txt
task2DLL/src/: main.cpp
task2DLL/subdirectory/: CMakeLists.txt  Leaver.cpp  Leaver.h
task2VisualStudio/Project2DLL/: Project2DLL.sln
task2VisualStudio/Project2DLL/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
task2VisualStudio/Project2DLL/Project2DLL/: Leaver2.cpp  Leaver2.h  Project2DLL.vcxproj  Project2DLL.vcxproj.filters
task2VisualStudio/Project2DLL/client2/: client2.cpp  client2.vcxproj
